--- a/rs/package.json
+++ b/rs/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "npm run start"
   },
   "author": "",
+  "dependencies": {
+    "hono": "^3.0.0"
+  },
   "license": "ISC",
   "description": ""
   
