--- a/hinemosu1415/package.json
+++ b/hinemosu1415/package.json
@@ -1,10 +1,5 @@
 {
-    "name": "my-node-app",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "dependencies": {}
+    "name": "http-server-intro",
+    "type": "module"
   }
   
