--- a/.github/workflows/pr-title-check.yml
+++ b/.github/workflows/pr-title-check.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Validate PR Title
         uses: deepakputhraya/action-pr-title@master
         with:
-          regex: '^[Level \d+] [a-zA-Z0-9]([a-zA-Z0-9]?|[\-]?([a-zA-Z0-9])){0,38}$'
+          regex: '^\[Level \d+\] [a-zA-Z0-9]([a-zA-Z0-9]?|[\-]?([a-zA-Z0-9])){0,38}$'
           verbal_description: "タイトルは次のような形式にする必要があります: [Level ?] your-github-id (例: [Level 1] yukikamome316)"
           github_token: ${{ github.token }}
