Enter  でtodo  を追加できるようにした

--- a/zerozero-0-0/package.json
+++ b/zerozero-0-0/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "@hono/valibot-validator": "^0.5.2",
     "hono": "^4.7.7",
     "valibot": "^1.0.0"
   }
