--- a/hinemosu1415/package.json
+++ b/hinemosu1415/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "ctf-todo-app-hands-on-2025",
-  "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "@hono/node-server": "^1.11.1",
-    "hono": "^4.3.6"
-  },
-  "scripts": {
-    "start": "node server.js"
-  }
+    "name": "hono-server",
+    "type": "module",
+    "scripts": {
+        "dev": "tsx watch src/server.js"
+    },
+    "dependencies": {
+        "@hono/node-server": "^1.13.2",
+        "cors": "^2.8.5",
+        "hono": "^4.7.7"
+    },
+    "devDependencies": {
+        "@types/node": "^20.11.17",
+        "tsx": "^4.19.1"
+    }
 }
