--- a/hinemosu1415/package.json
+++ b/hinemosu1415/package.json
@@ -2,15 +2,10 @@
     "name": "hono-server",
     "type": "module",
     "scripts": {
-        "dev": "tsx watch src/server.js"
+        "start": "node src/server.js"
     },
     "dependencies": {
-        "@hono/node-server": "^1.13.2",
-        "cors": "^2.8.5",
+        "@hono/node-server": "^1.14.1",
         "hono": "^4.7.7"
-    },
-    "devDependencies": {
-        "@types/node": "^20.11.17",
-        "tsx": "^4.19.1"
     }
 }
