--- a/nomanoma121/server/package.json
+++ b/nomanoma121/server/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "@hono/node-server": "^1.14.1",
-    "hono": "^4.7.7"
+    "@hono/valibot-validator": "^0.5.2",
+    "hono": "^4.7.7",
+    "valibot": "^1.0.0"
   }
 }
