Hello, Hono.js!

--- a/rururu273/package.json
+++ b/rururu273/package.json
@@ -2,10 +2,15 @@
   "name": "rururu273",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "scripts": {
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@hono/node-server": "^1.14.1",
+    "hono": "^4.7.7"
+  }
 }
