--- a/nomanoma121/server/package.json
+++ b/nomanoma121/server/package.json
@@ -14,6 +14,7 @@
     "@hono/node-server": "^1.14.1",
     "@hono/valibot-validator": "^0.5.2",
     "hono": "^4.7.7",
+    "sqlite3": "^5.1.7",
     "valibot": "^1.0.0"
   }
 }
