--- a/hinemosu1415/package.json
+++ b/hinemosu1415/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@hono/node-server": "^1.14.1",
         "@hono/valibot-validator": "^0.5.2",
+        "better-sqlite3": "^11.10.0",
         "hono": "^4.7.7"
     }
 }
