ファイルの並び替え

--- a/hinemosu1415/src/docker-compose.yml
+++ b/hinemosu1415/src/docker-compose.yml
@@ -1,11 +1,13 @@
+version: "3.8"
+
 services:
   todo-api:
     build:
-      context: .
+      context: .                
     ports:
       - "8000:8000"
     volumes:
-      - ./db:/usr/src/app/db
+      - ../db:/usr/src/app/db   
     environment:
       - NODE_ENV=production
     container_name: todo-api
