--- a/hinemosu1415/src/package.json
+++ b/hinemosu1415/src/package.json
@@ -2,7 +2,7 @@
     "name": "ctf-todo-app-hands-on-2025",
     "type": "module",
     "scripts": {
-        "start": "node src/server.js"
+        "start": "node server.js"
     },
     "dependencies": {
         "@hono/node-server": "^1.14.1",
